<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"

	android:layout_height="fill_parent" android:background="#C0C0C0"
	android:id="@+id/popup_linear_layout" android:isScrollContainer="true"
	android:scrollbarAlwaysDrawVerticalTrack="true"
	android:scrollbarAlwaysDrawHorizontalTrack="true" >

	<ScrollView android:id="@+id/popup_scrollView"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<LinearLayout android:orientation="vertical"
			android:id="@+id/popup_inner_linear_layout" android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView android:text="@string/text_label_name" android:id="@+id/label_name"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_name"></EditText>
			<TextView android:text="@string/text_label_username"
				android:id="@+id/label_username" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_username"></EditText>
			<TextView android:text="@string/text_label_password"
				android:id="@+id/label_password" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_password" android:inputType="textPassword"></EditText>
			<TextView android:text="@string/text_label_confirm_password"
				android:id="@+id/label_confirm_passowrd" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_confirm_password" android:inputType="textPassword"></EditText>

			<TextView android:text="@string/text_label_nic" android:id="@+id/label_nic"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_nic" android:inputType="number"></EditText>

			<TextView android:text="@string/text_label_family_num"
				android:id="@+id/label_family_num" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_family_num"></EditText>

			<TextView android:text="@string/text_label_area_code"
				android:id="@+id/label_area_code" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000000"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/edit_text_area_code" android:inputType="number"></EditText>



			<Button android:text="@string/text_button_create"
				android:id="@+id/button_popup_create" android:layout_width="160dp"
				android:layout_height="40dp"
				android:onClick="create_user_eventHandler"></Button>

		</LinearLayout>
	</ScrollView>






</LinearLayout>
