<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:id="@+id/open_doc_linear_layout"
	android:scrollbarAlwaysDrawHorizontalTrack="true" android:scrollbars="vertical" android:background="@drawable/election_logo">

	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:gravity="center"
		android:layout_gravity="center" android:layout_centerInParent="true">

		<Button android:text="@string/button_language" android:id="@+id/button_language"
			android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"></Button>
		<Button android:text="@string/button_sms" android:id="@+id/button_sms"
			android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"></Button>
		<Button android:text="@string/button_online" android:id="@+id/button_online"
			android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true"></Button>
	</LinearLayout>

</LinearLayout>